--- a/Mundo 2/Meu Primeiro Site Cringe/Missão Conceitual 3/06_Validação de dados em formulário HTML.html
+++ b/Mundo 2/Meu Primeiro Site Cringe/Missão Conceitual 3/06_Validação de dados em formulário HTML.html
@@ -22,7 +22,7 @@
 			<label for="telefone">Insira o número do telefone celular:</label>
 			<input type="tel" id="telefone" name="telefone"
 			placeholder="(DD)99999-9999"
-			pattern="[0-9](2)-[0-9]{5}-[0-9]{4}"
+			pattern="[0-9]({2})-[0-9]{5}-[0-9]{4}"
 			required><br /><br />
 			<!--Botão enviar-->	
 			<input type="submit" value="submit"><br />
